Closed Bug 1815519 Opened 1 year ago Closed 1 year ago

VideoFrame deserialization/transfer-receiving shouldn't work in non-exposed realm

Categories

(Core :: Audio/Video: Web Codecs, defect)

defect

Tracking

()

RESOLVED FIXED
112 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox110 --- wontfix
firefox111 --- wontfix
firefox112 --- fixed

People

(Reporter: chunmin, Assigned: chunmin)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(2 files, 2 obsolete files)

Serializing or transferring a VideoFrame from main thread to the shared worker or the service worker should throw an error since VideoFrame is only exposed to Window and DedicatedWorker.

Comment on attachment 9316476 [details]
WIP: Bug 1815519 - Ensure VideoFrame is unavailable in shared or service worker

Revision D169157 was moved to bug 1815511. Setting attachment 9316476 [details] to obsolete.

Attachment #9316476 - Attachment is obsolete: true
Summary: VideoFrame should not be passed to Shared Worker and Service Worker → VideoFrame deserialization in Shared Worker and Service Worker should throw DataCloneError
Attachment #9316475 - Attachment is obsolete: true
Summary: VideoFrame deserialization in Shared Worker and Service Worker should throw DataCloneError → VideoFrame deserialization/transfer-receiving shouldn't work in non-exposed realm
Regressed by: 1774302, 1774306
Pushed by cchang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/501e8e7bf41a
Don't deserialize VideoFrame in non-exposed realm r=smaug
https://hg.mozilla.org/integration/autoland/rev/9181f66ac428
Dont receive transferred VideoFrame in non-exposed realm r=smaug
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch

The patch landed in nightly and beta is affected.
:chunmin, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox111 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(cchang)

The VideoFrame is behind a dom.media.webcodecs.enabled pref. There is no need to uplift since users won't be affected.

Flags: needinfo?(cchang)
Component: Audio/Video → Audio/Video: Web Codecs
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: