Bug 1815519 - Don't deserialize VideoFrame in non-exposed realm r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D169364