dom/base/StructuredCloneHolder.cpp
@@ -1024,8 +1024,11 @@ JSObject* StructuredCloneHolder::CustomReadHandler(
   if (StaticPrefs::dom_media_webcodecs_enabled() &&
       aTag == SCTAG_DOM_VIDEOFRAME &&
       CloneScope() == StructuredCloneScope::SameProcess) {
-    return VideoFrame::ReadStructuredClone(aCx, mGlobal, aReader,
-                                           VideoFrames()[aIndex]);
+    JS::Rooted<JSObject*> global(aCx, mGlobal->GetGlobalJSObject());
+    if (VideoFrame_Binding::ConstructorEnabled(aCx, global)) {
+      return VideoFrame::ReadStructuredClone(aCx, mGlobal, aReader,
+                                             VideoFrames()[aIndex]);
+    }
   }
 
   return ReadFullySerializableObjects(aCx, aReader, aTag);
